[package]
name = "rust_prog_lang"
version = "0.1.0"
authors = ["tokiwadai <yezua.ho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "test2"
path = "src/bin/test2.rs"

[[bin]]
name = "1_variable_scope"
path = "src/bin/chap4/1_variable_scope.rs"

[[bin]]
name = "2_variable_move"
path = "src/bin/chap4/2_variable_move.rs"

[[bin]]
name = "3_variable_ownership"
path = "src/bin/chap4/3_variable_ownership.rs"

[[bin]]
name = "4_reference_borrowing"
path = "src/bin/chap4/4_reference_borrowing.rs"

[[bin]]
name = "5_mut_immut_references"
path = "src/bin/chap4/5_mut_immut_references.rs"

[[bin]]
name = "6_dangle_reference"
path = "src/bin/chap4/6_dangle_reference.rs"

[[bin]]
name = "7_string_slices"
path = "src/bin/chap4/7_string_slices.rs"

[[bin]]
name = "8_string_literal_slices"
path = "src/bin/chap4/8_string_literal_slices.rs"


[[bin]]
name = "1_struct_sample"
path = "src/bin/chap5/1_struct_sample.rs"

[[bin]]
name = "2_struct_rect_sample"
path = "src/bin/chap5/2_struct_rect_sample.rs"

[[bin]]
name = "1_enum_sample"
path = "src/bin/chap6/1_enum_sample.rs"

[[bin]]
name = "2_enum_sample"
path = "src/bin/chap6/2_enum_sample.rs"

[[bin]]
name = "3_enum_sample"
path = "src/bin/chap6/3_enum_sample.rs"

[[bin]]
name = "4_enum_sample"
path = "src/bin/chap6/4_enum_sample.rs"

[[bin]]
name = "5_enum_option"
path = "src/bin/chap6/5_enum_option.rs"

[[bin]]
name = "6_enum_if_let"
path = "src/bin/chap6/6_enum_if_let.rs"

[[bin]]
name = "1_vec_sample"
path = "src/bin/chap8/1_vec_sample.rs"

[[bin]]
name = "2_vec_immut_ref"
path = "src/bin/chap8/2_vec_immut_ref.rs"

[[bin]]
name = "3_vec_iter"
path = "src/bin/chap8/3_vec_iter.rs"

[[bin]]
name = "4_string_samples"
path = "src/bin/chap8/4_string_samples.rs"

[[bin]]
name = "5_hashmap_samples"
path = "src/bin/chap8/5_hashmap_samples.rs"

[profile.release]
# panic abort, which ends the program without cleaning up.
# Memory that the program was using will then need to be cleaned up by the operating system.
#panic = 'abort'

[[bin]]
name = "1_panic_samples"
path = "src/bin/chap10/1_panic_samples.rs"

[[bin]]
name = "2_result_recoverable_samples"
path = "src/bin/chap10/2_result_recoverable_samples.rs"

[[bin]]
name = "3_result_matching_samples"
path = "src/bin/chap10/3_result_matching_samples.rs"

[[bin]]
name = "4_propagating_error"
path = "src/bin/chap10/4_propagating_error.rs"

[[bin]]
name = "1_generic_samples"
path = "src/bin/chap11/1_generic_samples.rs"
